# Frida-Tools

./: .gitignore  README.md  produce-pdf.py  pyproject.toml  requirements.txt  test-privacy.sh
TLS-intercept/: intercept.py  process_data.py  script.js  wordlist.txt
api-tracing/: list-apis.py
databases/: database-probe.py  database_summary.txt  dump-files.py
manifest-analysis/: check-activities.py  check-version.py  exported-activities.txt
memory-testing/: get-memory-ranges.py
network-sniffing/: encryption-probe.py  network-probe.py  network_summary.txt  open-connection-interceptor.py
permissions/: compare-permissions.py  log-permissions.py  permissions.txt  test-permissions-general.sh
